opam-version: "2.0"
name: "sandmark"
synopsis: "Minimal OCaml project for starting a new one"
maintainer: "Christian Lindig <lindig@gmail.com>"
authors: "Christian Lindig <lindig@gmail.com>"
homepage: "https://github.com/ocaml-bench/sandmark"
license: "CC 1.0 Universal"
depends: [
  "dune" {build}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/ocaml-bench/sandmark.git"
bug-reports: "https://github.com/ocaml-bench/sandmark/issues"
