opam-version: "2.0"
name: "orun"
version: "0.1"
synopsis: "Run benchmarks and measure performance"
maintainer: "Stephen Dolan <stephen.dolan@cl.cam.ac.uk>"
authors: "Stephen Dolan <stephen.dolan@cl.cam.ac.uk>"
license: "MIT"
dev-repo: ""
depends: [ "ocaml" "cmdliner" "yojson" ]
build: ["dune" "build" "-p" name]
