opam-version: "2.0"
name: "orun"
version: "0.1"
synopsis: "Run benchmarks and measure performance"
maintainer: "Stephen Dolan <stephen.dolan@cl.cam.ac.uk>"
authors: "Stephen Dolan <stephen.dolan@cl.cam.ac.uk>"
license: "MIT"
depends: [ "ocaml" "base" "stdio" "re" "cmdliner" "yojson" ]
build: [
  ["ocaml-update-c" "wait4.c"] {ocaml:update-c}
  ["dune" "build" "-p" name]
]
