;; Adapted from OCamlPro's ocamlbench-repo
;; See https://github.com/OCamlPro/ocamlbench-repo
(executable
 (name bdd))

(rule
 (targets bdd.bench)
 (deps (:prog bdd.exe))
 (action (progn
	(run orun -o %{targets} -- %{prog})
	(run perf stat -ax'|' -o %{prog}.perf %{prog}))))

(alias (name bench) (deps bdd.bench))

