(alias
  (name buildbench)
  (deps 
	AbstractInterpretation.v
	AbstractInterpret.v
	BasicSyntax.v
	CompilerCorrectness.v
	ConcurrentSeparationLogic.v
	Connecting.v
	DataAbstraction.v
	DeepAndShallowEmbeddings.v
	DependentInductiveTypes.v
	ex1.v
	FirstClassFunctions.v
	Frap.v
	FrapWithoutSets.v
	HoareLogic.v
	Imp.v
	Interpreters.v
	IntroToProofScripting.v
	Invariant.v
	LambdaCalculusAndTypeSoundness.v
	LogicProgramming.v
	Map.v
	MessagesAndRefinement.v
	ModelChecking_sol.v
	ModelChecking.v
	ModelCheck.v
	OperationalSemantics.v
	Polymorphism.v
	ProgramDerivation.v
	ProofByReflection.v
	Relations.v
	SeparationLogic.v
	SepCancel.v
	SessionTypes.v
	Sets.v
	SharedMemory.v
	SubsetTypes.v
	TransitionSystems.v
	TypesAndMutation.v
	Var.v))
