(alias
  (name buildbench)
  (deps AbstractInterpretation.v AbstractInterpret.v BasicSyntax.v CompilerCorrectness.v  DeepAndShallowEmbeddings.v ex1.v Frap.v HoareLogic.v Imp.v Interpreters.v IntroToProofScripting.v	Invariant.v LambdaCalculusAndTypeSoundness.v LogicProgramming.v OperationalSemantics.v Polymorphism.v ProofByReflection.v Relations.v SharedMemory.v SubsetTypes.v TransitionSystems.v TypesAndMutation.v Var.v))
