; Generates a graph as an array of edges and mashals it to a file.
(executable
  (name gen)
  (modules gen)
  (libraries generate kernel1Par unix)
)

(library
  (name generate)
  (modules generate)
  (libraries graphTypes domainslib)
)

(library
  (name graphTypes)
  (modules graphTypes)
  (modules_without_implementation graphTypes)
)

(library
  (name sparseGraph)
  (modules sparseGraph)
  (libraries graphTypes lockfree)
)

(library
  (name kernel1Par)
  (modules kernel1Par)
  (libraries generate sparseGraph unix domainslib)
)

(executable
  (name kernel1Par_run)
  (modules kernel1Par_run)
  (libraries graphTypes generate kernel1Par unix domainslib)
)

(alias
  (name multibench_parallel)
  (deps gen.exe kernel1Par_run.exe))
