; Generates a graph as an array of edges and mashals it to a file.
(executable
  (name gen)
  (modules gen)
  (libraries generate kernel1Par unix)
)

(library
  (name generate)
  (modules generate)
  (libraries graphTypes domainslib)
)

(library
  (name graphTypes)
  (modules graphTypes)
  (modules_without_implementation graphTypes)
)

(library
  (name sparseGraph)
  (modules sparseGraph)
  (libraries graphTypes lockfree)
)

(library
  (name kernel1Par)
  (modules kernel1Par)
  (libraries generate sparseGraph unix domainslib)
)

(executable
  (name kernel1_run_multicore)
  (modules kernel1_run_multicore)
  (libraries graphTypes generate kernel1Par unix domainslib)
)

(rule
  (targets edges.data)
  (deps (:prog gen.exe))
  (action (run %{prog} -scale 21 -edgefactor 16 -ndomains 16 %{targets})))

(alias
  (name multibench_parallel)
  (deps kernel1_run_multicore.exe edges.data))
