
(library
  (name generateSeq)
  (modules generateSeq)
  (libraries graphTypes fileHandler)
)

(library
  (name fileHandler)
  (modules fileHandler)
)

(executable
  (name gen)
  (modules gen)
  (libraries unix generateSeq fileHandler)
)

(library
  (name sparseGraphSeq)
  (modules sparseGraphSeq)
  (libraries graphTypes)
  ;(preprocess; (pps ppx_inline_test ppx_assert))
  ;(inline_tests)
)

(library
  (name kernel1Seq)
  (modules kernel1Seq)
  (libraries generateSeq sparseGraphSeq unix)
)

(library
  (name kernel2Seq)
  (modules kernel2Seq)
  (libraries generateSeq sparseGraphSeq unix)
  ;(preprocess; (pps ppx_inline_test ppx_assert))
  ;(inline_tests)
)

(library
  (name kernel3Seq)
  (modules kernel3Seq)
  (libraries graphTypes generateSeq sparseGraphSeq unix)
  ;(preprocess; (pps ppx_inline_test ppx_assert))
  ;(inline_tests)
)

(executable
  (name sampleSearchKeys)
  (modules sampleSearchKeys)
  (libraries graphTypes generateSeq sparseGraphSeq unix)
)

(executable
  (name kernel1_run)
  (modules kernel1_run)
  (libraries sparseGraphSeq graphTypes fileHandler kernel1Seq unix)
)

(executable
  (name kernel2_run)
  (modules kernel2_run)
  (modes byte exe)
  (libraries sparseGraphSeq graphTypes fileHandler kernel2Seq unix)
)

(executable
  (name kernel2_run_multicore)
  (modules kernel2_run_multicore)
  (modes byte exe)
  (libraries domainslib sparseGraphSeq graphTypes fileHandler kernel2Seq unix)
)

(executable
  (name kernel3_run)
  (modules kernel3_run)
  (modes byte exe)
  (libraries sparseGraphSeq graphTypes fileHandler kernel3Seq unix)
)

(executable
  (name kernel3_run_multicore)
  (modules kernel3_run_multicore)
  (modes byte exe)
  (libraries domainslib sparseGraphSeq graphTypes fileHandler kernel3Seq unix)
)

;(alias
;  (name buildbench)
;  (deps kronecker.exe kernel2.exe kernel3.exe
;        gen.exe kernel1_run.exe)
;)
