(executable
	(name irmin_mem_rw)
	(modules irmin_mem_rw)
	(libraries irmin irmin.mem lwt lwt.unix))

(executable
	(name layers)
	(modules layers)
	(libraries ppx_deriving_yojson.runtime irmin-pack irmin-pack.layered irmin-layers index fmt logs lwt lwt.unix yojson irmin unix cmdliner))

;;(alias (name buildbench) (deps layers.exe irmin_mem_rw.exe))
