

(executables
    (names effect_throughput_clone)
    (modules effect_throughput_clone))

(executables
    (names effect_throughput_perform)
    (modules effect_throughput_perform))

(executables
    (names effect_throughput_perform_drop)
    (modules effect_throughput_perform_drop))

(executables
    (names effect_throughput_val)
    (modules effect_throughput_val))

(executables
    (names algorithmic_differentiation)
    (modules algorithmic_differentiation))

(executables
    (names queens)
    (modules queens))

(executables
    (names eratosthenes)
    (modules eratosthenes)
    (libraries lockfree))

(executables
    (names test_sched)
    (modules ms_sched test_sched)
    (libraries lockfree))

(alias
		(name multibench_effects)
		(deps algorithmic_differentiation.exe queens.exe eratosthenes.exe test_sched.exe effect_throughput_clone.exe effect_throughput_perform.exe effect_throughput_perform_drop.exe effect_throughput_val.exe))
