
(executable
 (name rec_seq_ack)
 (modules rec_seq_ack)
)

(executable
 (name rec_eff_ack)
 (modules rec_eff_ack)
)

(executable
 (name rec_seq_evenodd)
 (modules rec_seq_evenodd)
)

(executable
 (name rec_eff_evenodd)
 (modules rec_eff_evenodd)
)

(executable
 (name rec_seq_fib)
 (modules rec_seq_fib)
)

(executable
 (name rec_eff_fib)
 (modules rec_eff_fib)
)

(executable
 (name rec_seq_motzkin)
 (modules rec_seq_motzkin)
)

(executable
 (name rec_eff_motzkin)
 (modules rec_eff_motzkin)
)

(executable
 (name rec_seq_tak)
 (modules rec_seq_tak)
)

(executable
 (name rec_eff_tak)
 (modules rec_eff_tak)
)

(executable
 (name rec_seq_sudan)
 (modules rec_seq_sudan)
)

(executable
 (name rec_eff_sudan)
 (modules rec_eff_sudan)
)

(executables
    (names effect_throughput_clone)
    (modules effect_throughput_clone))

(executables
    (names effect_throughput_perform)
    (modules effect_throughput_perform))

(executables
    (names effect_throughput_perform_drop)
    (modules effect_throughput_perform_drop))

(executables
    (names effect_throughput_val)
    (modules effect_throughput_val))

(executables
    (names algorithmic_differentiation)
    (modules algorithmic_differentiation))

(executables
    (names queens)
    (modules queens))

(executables
    (names eratosthenes)
    (modules eratosthenes)
    (libraries lockfree))

(executables
    (names test_sched)
    (modules ms_sched test_sched)
    (libraries lockfree))

(alias
		(name retro_eff_eff)
		(deps rec_eff_ack.exe rec_eff_evenodd.exe rec_eff_fib.exe
		   rec_eff_motzkin.exe rec_eff_tak.exe rec_eff_sudan.exe))

(alias
		(name retro_eff_seq)
		(deps rec_seq_ack.exe rec_seq_evenodd.exe rec_seq_fib.exe
		   rec_seq_motzkin.exe rec_seq_tak.exe rec_seq_sudan.exe))

(alias
		(name multibench_effects)
		(deps algorithmic_differentiation.exe queens.exe eratosthenes.exe test_sched.exe
        effect_throughput_clone.exe effect_throughput_perform.exe effect_throughput_perform_drop.exe effect_throughput_val.exe
        rec_seq_ack.exe rec_eff_ack.exe rec_seq_evenodd.exe rec_eff_evenodd.exe rec_seq_fib.exe rec_eff_fib.exe rec_seq_motzkin.exe rec_eff_motzkin.exe rec_seq_tak.exe rec_eff_tak.exe rec_seq_sudan.exe rec_eff_sudan.exe))
